# codeflix

.github/: settings.yml
microservice-admin-video-catalog/: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  simulator.sqlite
microservice-admin-video-catalog/.devcontainer/: devcontainer.json
microservice-admin-video-catalog/.github/: settings.yml
microservice-admin-video-catalog/_uml/usecases/: category.usecase.wsd
microservice-admin-video-catalog/src/_shared/domain/: entities.py  exceptions.py  notification.py  repositories.py  validators.py  value_objects.py
microservice-admin-video-catalog/src/category/application/: use_case.py
microservice-admin-video-catalog/src/category/domain/: entities.py
microservice-admin-video-catalog/src/core/_shared/: dto.py  entities.py  notification.py  validators.py  value_objects.py
microservice-admin-video-catalog/src/core/_shared/application/: dto.py  use_cases.py
microservice-admin-video-catalog/src/core/_shared/domain/: entities.py  exceptions.py  repositories.py  validators.py  value_objects.py
microservice-admin-video-catalog/src/core/category/: dto.py  entities.py  repositories.py  use_cases.py
microservice-admin-video-catalog/src/core/category/application/: dto.py  use_cases.py
microservice-admin-video-catalog/src/infraestructure/: db.py
microservice-admin-video-catalog/src/infraestructure/api/: server.py
microservice-admin-video-catalog/src/infraestructure/category/: repository.py  schema.py
microservice-admin-video-catalog/uml/: class-diagram.wsd
(+32 files in other folders)
