[project]
name = "Admin Microservice Videos Python"
version = "0.0.0"
description = ""
authors = [
    {name = "Gabriel Brotas", email = "gabrielbrotas22@gmail.com"},
]
dependencies = [
    "fastapi>=0.78.0",
    "uvicorn>=0.17.6",
    "pydantic>=1.9.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=1.6.0",
    "pylint>=2.13.9",
    "pytest>=7.1.2"
]
[tool.pdm.scripts]
dev = "uvicorn src.infraestructure.api.server:app --reload"
test = "pytest --ignore __pypackages__"
pep8 = "autopep8 --in-place --recursive ./src/"
pylint = "pylint ./src"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
